# dumb-obfuscator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  setup.sh  test.sh
dumbo/: CMakeLists.txt  Dumbo.cpp
helper/: modexp.c
irsed/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml  test.sh
irsed/app/: Main.hs
irsed/src/: Irsed.hs
test/: test.c
